add Profile model and update repositories for email queries; enhance CORS configuration